<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/sCodigo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/sDescripcion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/sPrecio"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <Button
        android:id="@+id/bRegistrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:onClick="RegistrarClick"
        android:text="@string/sRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecomendable" />

    <Button
        android:id="@+id/bBuscar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="20dp"
        android:onClick="BuscarClick"
        android:text="@string/sBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecomendable" />

    <Button
        android:id="@+id/bModificar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="ModificarClick"
        android:text="@string/sModificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRegistrar" />

    <Button
        android:id="@+id/bEliminar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:onClick="EliminarClick"
        android:text="@string/sEliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bBuscar" />

    <EditText
        android:id="@+id/etNota"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Color"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecio" />

    <EditText
        android:id="@+id/etRecomendable"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Recomendable"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNota" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="12dp"
        android:onClick="siguienteActivity"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bModificar" />

</android.support.constraint.ConstraintLayout>